Added project selection functionality to add test form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,3 +58,13 @@ hr.reduced-margin {
 	float: left;
 	width: 420px;
 }
+
+.form-list {
+	list-style:none;
+	text-indent: 0;
+	margin-left: 0;	
+}
+
+.show-add {
+	cursor:pointer;
+}
