--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,3 +82,11 @@ input[type="text"].title-input {
 .show-add {
 	cursor:pointer;
 }
+.border-row {
+	border-top: 1px solid #ddd;
+	padding:8px;
+  	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+}
